--- a/src/config.json
+++ b/src/config.json
@@ -1,4 +1,12 @@
 {
     "baseUrl":"http://localhost:3000/",
-    "serverUrl":"http://localhost:3010/"
+    "serverUrl":"http://localhost:3010/",
+    "coursesCategories":[
+        { "title": "Alla categorier", "value": "" },
+        { "title": "Programmering", "value": "programming" },
+        { "title": "Analys", "value": "analytics" },
+        { "title": "Projektledning", "value": "project-management" },
+        { "title": "Nätverk", "value": "network" },
+        { "title": "Design", "value": "design" }
+      ]
 }
