Added TTD to the following components:     Table     CourseRegisterPage     NotFoundPage
Added more responsiveness for main page, courses and teachers page list

Added instructions on readme

--- a/src/config.json
+++ b/src/config.json
@@ -1,12 +1,4 @@
 {
     "baseUrl":"http://localhost:3000/",
-    "serverUrl":"http://localhost:3010/",
-    "coursesCategories":[
-        { "title": "Alla categorier", "value": "" },
-        { "title": "Programmering", "value": "programming" },
-        { "title": "Analys", "value": "analytics" },
-        { "title": "Projektledning", "value": "project-management" },
-        { "title": "Nätverk", "value": "network" },
-        { "title": "Design", "value": "design" }
-      ]
+    "serverUrl":"http://localhost:3010/"
 }
